Fix padding on About on mobile

--- a/site/src/sections/About/styles.module.scss
+++ b/site/src/sections/About/styles.module.scss
@@ -60,7 +60,7 @@
     }
 
     @include breakpoint("<=medium") {
-      padding: 1rem 4rem;
+      padding: 1rem 2rem;
     }
   }
 
